--- a/wearosmessenger/src/main/AndroidManifest.xml
+++ b/wearosmessenger/src/main/AndroidManifest.xml
@@ -1,2 +1,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.maxmobility.wearosmessenger" />
+    package="com.github.maxmobility.wearosmessenger">
+    <application
+        android:allowBackup="true"
+        android:label="wearosmessager"
+        android:theme="@android:style/Theme.DeviceDefault">
+        <service
+            android:name="com.github.maxmobility.wearmessage.DataLayerListenerService" >
+            <intent-filter>
+                <!-- listeners receive events that match the action and data filters -->
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/app-data"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/app-message"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/wear-data"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/wear-message"/>
+            </intent-filter>
+        </service>
+    </application>
+
+    </manifest>
