--- a/wearosmessenger/src/main/AndroidManifest.xml
+++ b/wearosmessenger/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.maxmobility.wearosmessenger">
-    <application
-        android:allowBackup="true"
-        android:label="wearosmessager">
+    <application   android:label="wearosmessenger">
         <service
             android:name="com.github.maxmobility.wearmessage.DataLayerListenerService" >
             <intent-filter>
