--- a/wearosmessenger/src/main/AndroidManifest.xml
+++ b/wearosmessenger/src/main/AndroidManifest.xml
@@ -1,26 +1,41 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.maxmobility.wearosmessenger">
-    <application   android:label="wearosmessenger">
+
+    <application android:label="wearosmessenger">
         <service
-            android:name="com.github.maxmobility.wearmessage.DataLayerListenerService" >
+            android:name="com.github.maxmobility.wearmessage.DataLayerListenerService"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <!-- listeners receive events that match the action and data filters -->
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/app-data"/>
+                <data
+                    android:host="*"
+                    android:pathPrefix="/app-data"
+                    android:scheme="wear" />
             </intent-filter>
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/app-message"/>
+                <data
+                    android:host="*"
+                    android:pathPrefix="/app-message"
+                    android:scheme="wear" />
             </intent-filter>
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/wear-data"/>
+                <data
+                    android:host="*"
+                    android:pathPrefix="/wear-data"
+                    android:scheme="wear" />
             </intent-filter>
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/wear-message"/>
+                <data
+                    android:host="*"
+                    android:pathPrefix="/wear-message"
+                    android:scheme="wear" />
             </intent-filter>
         </service>
     </application>
 
-    </manifest>
+</manifest>
