--- a/wearosmessenger/src/main/AndroidManifest.xml
+++ b/wearosmessenger/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.maxmobility.wearosmessenger">
 
-    <application android:label="wearosmessenger">
+    <application>
         <service
             android:name="com.github.maxmobility.wearmessage.DataLayerListenerService"
             android:enabled="true"
