--- a/wearosmessenger/src/main/AndroidManifest.xml
+++ b/wearosmessenger/src/main/AndroidManifest.xml
@@ -1,41 +1,40 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.maxmobility.wearosmessenger">
+<manifest package="com.github.maxmobility.wearosmessenger">
 
     <application>
-        <service
-            android:name="com.github.maxmobility.wearmessage.DataLayerListenerService"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <!-- listeners receive events that match the action and data filters -->
-                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
-                <data
-                    android:host="*"
-                    android:pathPrefix="/app-data"
-                    android:scheme="wear" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <data
-                    android:host="*"
-                    android:pathPrefix="/app-message"
-                    android:scheme="wear" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
-                <data
-                    android:host="*"
-                    android:pathPrefix="/wear-data"
-                    android:scheme="wear" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <data
-                    android:host="*"
-                    android:pathPrefix="/wear-message"
-                    android:scheme="wear" />
-            </intent-filter>
-        </service>
+        <!--        <service-->
+        <!--            android:name="com.github.maxmobility.wearmessage.DataLayerListenerService"-->
+        <!--            android:enabled="true"-->
+        <!--            android:exported="true">-->
+        <!--            <intent-filter>-->
+        <!--                &lt;!&ndash; listeners receive events that match the action and data filters &ndash;&gt;-->
+        <!--                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />-->
+        <!--                <data-->
+        <!--                    android:host="*"-->
+        <!--                    android:pathPrefix="/app-data"-->
+        <!--                    android:scheme="wear" />-->
+        <!--            </intent-filter>-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />-->
+        <!--                <data-->
+        <!--                    android:host="*"-->
+        <!--                    android:pathPrefix="/app-message"-->
+        <!--                    android:scheme="wear" />-->
+        <!--            </intent-filter>-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />-->
+        <!--                <data-->
+        <!--                    android:host="*"-->
+        <!--                    android:pathPrefix="/wear-data"-->
+        <!--                    android:scheme="wear" />-->
+        <!--            </intent-filter>-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />-->
+        <!--                <data-->
+        <!--                    android:host="*"-->
+        <!--                    android:pathPrefix="/wear-message"-->
+        <!--                    android:scheme="wear" />-->
+        <!--            </intent-filter>-->
+        <!--        </service>-->
     </application>
 
 </manifest>
